# Football-Tactical-Pattern-Recognition

./: .gitignore  README.md  automate.sh  automate_clustering.py  download_data.py  entities.py  evaluate_clustering.py  evaluate_sequence_mining.py  extract_teams_phases.py  preprocessing.py  requirements.txt  test_clustering.py
dashboard/: clustering.py  main.py  phases.py
data/: matches.csv
ftpr/: pyproject.toml
ftpr/src/ftpr/: __init__.py  clustering.py  dataloader.py  entities.py  miner.py  preprocessing.py  representation.py  utils.py  visualization.py
notebooks/: analysis_dataset.ipynb  analysis_phase_lengths.ipynb  clustering.ipynb  descretizer.ipynb  download_data.ipynb  get_location_series.ipynb  mpl_soccer_pass_map.ipynb  mpl_soccer_phase.ipynb  phase_validation.ipynb  silhouette.ipynb  simplified_events.ipynb
