# pyproject.toml

[build-system]
requires      = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftpr"
version = "1.0.0"
dependencies = [
    "statsbombpy>=1.13.0",
    "numpy>=1.26.4",
    "dtaidistance==2.3.12",
    "scikit-learn>=1.5.0",
    "tslearn>=0.6.3",
    "scipy>=1.13.0",
    "spmf>=1.4",
    "tqdm>=4.66.4",
    "pandas>=2.2.2",
    "mplsoccer>=1.2.4"
]
requires-python = ">=3.9"
